# UltimateBattleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: RoundButton1.piskel  exit_button.piskel  help_button.piskel
docs/: Requirements.md  contrib.md  ideas.md  index.md
docs/SFML/: sfml.chw
include/: Board.cpp  Board.h  Ship.hpp  ShipPlacement.hpp  Tile.cpp  Tile.h
include/GUI/: Clickable.hpp  GameEngine.hpp  Hoverable.hpp  Scene.hpp
include/SFMLUtil/: BadIndexError.hpp  FileNotFoundException.hpp
spike/: Animation.cpp  Animation.h  BasicBattleship.cpp  BasicBattleshipTests.cpp  Board.cpp  Board.h  ButtonTest.cpp  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Coordinate.hpp  FiringMechanism.hpp  LoadTextureTest.cpp  SceneManagerTest.cpp  Ship.cpp  Ship.h  Ship.hpp  ShipPlacement.hpp  State.hpp  TestBoardMain.cpp  Tests.cpp  Tests.h  Tile.cpp  Tile.h  TileMovement.hpp  WindowAndDrawBall.cpp
spike/GUI/: Button.hpp  Clickable.hpp  GameEngine.hpp  Hoverable.hpp  Scene.hpp
spike/SFMLUtil/: BadIndexError.hpp  FileNotFoundException.hpp
src/: main.cpp
src/scenes/: Placing.cpp  Placing.hpp  mainmenu.hpp
